# adkit

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
skills/adkit/scripts/: .gitignore  ads.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
skills/adkit/scripts/ads_skill/: import_smoke_test.py
skills/adkit/scripts/ads_skill/ads/: entities.py  errors.py  publish.py
skills/adkit/scripts/ads_skill/audit/: scoring.py
skills/adkit/scripts/ads_skill/cli/: args.py  args_test.py  output.py  output_test.py
skills/adkit/scripts/ads_skill/fixes/: plan.py
skills/adkit/scripts/ads_skill/gaql/: builders.py  builders_test.py
skills/adkit/scripts/ads_skill/ideas/: parse.py  urls.py
skills/adkit/scripts/ads_skill/lib/: auth.py  brand.py  brand_test.py  cluster.py  cluster_test.py  executor.py  executor_test.py  markdown.py  markdown_test.py  merge.py  merge_test.py  metrics.py  metrics_test.py  report.py  report_test.py  schema.py  schema_test.py
skills/adkit/scripts/src/: index.ts
skills/adkit/scripts/src/adbriefs/: diff.test.ts  diff.ts  state.test.ts  state.ts  store.test.ts  store.ts
skills/adkit/scripts/src/ads/: entities.test.ts  entities.ts  enums.ts  errors.ts  publish.test.ts  publish.ts
skills/adkit/scripts/src/audit/: render.ts  rows.test.ts  rows.ts  scoring.test.ts  scoring.ts  types.ts
skills/adkit/scripts/src/cli/: args.test.ts  args.ts  entry.test.ts  entry.ts  output.test.ts  output.ts  py-format.ts
skills/adkit/scripts/src/fixes/: plan.test.ts  plan.ts
skills/adkit/scripts/src/lib/: psi.ts  (+19 more)
(+173 files in other folders)
