[project]
name = "ads-skill"
version = "0.1.0"
description = "lead-drop /adkit * skill — publish versioned Google Ads RSAs directly via google-ads-python."
requires-python = ">=3.11"
dependencies = [
  "google-ads>=24.1.0",
  "pydantic>=2.6",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ads_skill"]
exclude = ["**/*_test.py"]

[tool.pytest.ini_options]
testpaths = ["ads_skill"]
python_files = ["*_test.py"]
# Keep pytest's cache OUT of .claude/commands/ — Claude Code's skill scanner
# indexes everything under that tree and turns cache leaves into phantom skills.
cache_dir = "~/.cache/lead-drop/ads-skill-pytest-cache"

